# corex_eval

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
corex_eval/: __init__.py  build_silver.py  config.py  evaluate.py  gold.py  inputs.py  silver.py  split.py  submit.py
corex_eval/metrics/: __init__.py  annotation.py  collection.py  extraction.py
experiments/annotation/: results_overview.ipynb
experiments/annotation/bert_english_finetuned_career/: config.yaml  notebook.ipynb
experiments/annotation/bert_english_finetuned_career_broad/: notebook.ipynb
experiments/annotation/bert_finetuned_career/: config.yaml  notebook.ipynb
experiments/annotation/bert_finetuned_career_broad/: notebook.ipynb
experiments/annotation/career/: results_overview.ipynb
experiments/annotation/claude_opus46_broad/: config.yaml  notebook.ipynb
experiments/annotation/claude_opus46_fine/: config.yaml  notebook.ipynb
experiments/annotation/education/: results_overview.ipynb
experiments/annotation/gemini25flash_broad/: config.yaml  notebook.ipynb
experiments/annotation/gemini25flash_fine/: notebook.ipynb
experiments/annotation/gpt4o_broad/: notebook.ipynb
experiments/annotation/gpt4o_fine/: config.yaml  notebook.ipynb
experiments/annotation/gpt53_broad/: notebook.ipynb
experiments/annotation/gpt53_fine/: config.yaml  (+1 more)
experiments/extraction/: results_overview.ipynb  results_overview_career.ipynb
results/: register.csv
tests/: conftest.py  test_build_silver.py  test_evaluate.py  test_gold.py  test_inputs.py  test_metrics.py  test_silver.py  test_split.py
(+106 files in other folders)
